# axon_rust

./: .dockerignore  .env.example  .gitignore  .monolith-allowlist  CHANGELOG.md  CLAUDE.md  COLLECTION-ROUTING.md  Cargo.toml  Justfile  README.md  REVIEW-apps-web-2026-03-03.md  axon.subdomain.conf  axon_main.rs  crates.rs  deny.toml  docker-compose.yaml  lefthook.yml  lib.rs  main.rs  mcp_main.rs  mod.rs  rest-of-commands.md  rust-best-practices-fixes.md  spider-pattern-audit.md  test_html5gum.rs
.cargo/: audit.toml
.claude/commands/axon/: artifacts.md  ask.md  crawl.md  doctor.md  domains.md  embed.md  extract.md  help.md  ingest.md  map.md  query.md  research.md  retrieve.md  scrape.md  screenshot.md  search.md  sources.md  stats.md  status.md
.claude/commands/gemini/: crawl.toml  doctor.toml  embed.toml  extract.toml  ingest.toml  query.toml  research.toml  retrieve.toml  screenshot.toml  stats.toml  status.toml
.claude/skills/axon/: SKILL.md
.codex/prompts/axon/: artifacts.md  ask.md  crawl.md  doctor.md  domains.md  map.md  query.md  screenshot.md  sources.md
.config/: nextest.toml
.gemini/: commands
.github/workflows/: ci.yml
apps/web/: .dockerignore  .gitignore  .monolith-allowlist  CLAUDE.md  README.md  biome.json  components.json  middleware.ts  next.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  proxy.ts  shell-server.mjs  vitest.config.ts
apps/web/__tests__/: ai-command-utils.test.ts  api-copilot.test.ts  api-error.test.ts  axon-ws-exec.test.ts  axon-ws-logic.test.ts  chat-utils.test.ts  command-map.test.ts  download-urls.test.ts  (+43 more)
benches/: ask_query_retrieve.rs
commands/: ask.md  batch.md  crawl.md  doctor.md  query.md  reddit.md  retrieve.md  scrape.md  search.md  status.md
commands/axon/: artifacts.md  crawl.md  domains.md  embed.md  help.md  ingest.md  map.md  mcp-crate-readme.md  mcp-doc.md  mcp-tool-schema.md  query.md  research.md  scrape.md  screenshot.md  search.md  sources.md  stats.md  status.md
commands/codex/: embed.md  extract.md  help.md  ingest.md  research.md  retrieve.md  scrape.md  search.md  stats.md  status.md
commands/gemini/: artifacts.toml  ask.toml  domains.toml  help.toml  map.toml  scrape.toml  search.toml  sources.toml
config/: components.json  mcporter.json
crates/: README.md  crawl.rs  jobs.rs  mcp.rs  mod.rs  services.rs  web.rs
crates/cli/: CLAUDE.md  README.md  commands.rs
crates/core/: CLAUDE.md  README.md  config.rs  content.rs  health.rs  http.rs  logging.rs  ui.rs
crates/crawl/: CLAUDE.md  README.md  engine.rs  manifest.rs  mod.rs  screenshot.rs
crates/extract/: remote_extract.rs
crates/ingest/: CLAUDE.md  README.md  github.rs  mod.rs  reddit.rs  sessions.rs  youtube.rs
crates/jobs/: CLAUDE.md  README.md  batch_jobs.rs  common.rs  crawl_jobs.rs  crawl_jobs_dispatch.rs  crawl_jobs_legacy.rs  embed.rs  embed_jobs.rs  extract.rs  extract_jobs.rs  ingest.rs  ingest_jobs.rs  mod.rs  refresh.rs  status.rs  watch.rs  watch_worker.rs  worker_lane.rs
crates/mcp/: CLAUDE.md  README.md  config.rs  mod.rs  schema.rs  server.rs
crates/services/: acp.rs  crawl.rs  embed.rs  events.rs  extract.rs  ingest.rs  map.rs  query.rs  scrape.rs  screenshot.rs  search.rs  system.rs  types.rs
crates/vector/: CLAUDE.md  README.md  mod.rs  ops.rs  ops_dispatch.rs  ops_legacy.rs
crates/web/: CLAUDE.md  README.md  docker_stats.rs  download.rs  execute.rs  pack.rs  shell.rs
docker/: CLAUDE.md  Dockerfile  Dockerfile.chrome  README.md
docker/chrome/: Dockerfile
docker/rabbitmq/: 20-axon.conf
docker/scripts/: healthcheck-workers.sh
docker/web/: Dockerfile
docs/: API.md  ARCHITECTURE.md  CLAUDE-HOT-RELOAD.md  CLAUDE.md  CONTEXT-INJECTION.md  DEPLOYMENT.md  FEATURE-DELIVERY-FRAMEWORK.md  HEADLESS_OPTIONS.md  JOB-LIFECYCLE.md  LIVE-TEST-SCRIPTS.md  LOBE-WORKFLOW-VISION.md  MCP-TOOL-SCHEMA.md  MCP.md  OPERATIONS.md  PERFORMANCE.md  README.md  SCHEMA.md  SECURITY.md  SERVE.md  TESTING.md  UI-DESIGN-SYSTEM.md  WS-PROTOCOL.md  legacy-file-hashes.txt  live-test-scripts.md  monolith-policy.md  schema.md  spider-feature-flags.md  web-architecture.md
docs/commands/: ask.md  crawl.md  debug.md  dedupe.md  doctor.md  domains.md  embed.md  evaluate.md  extract.md  github.md  ingest.md  map.md  mcp.md  query.md  reddit.md  refresh.md  research.md  retrieve.md  scrape.md  screenshot.md  search.md  serve.md  sessions.md  sources.md  stats.md  status.md  suggest.md  watch.md  youtube.md
docs/ingest/: github.md  reddit.md  sessions.md  youtube.md
docs/plans/: 2026-03-03-services-layer-plan.md
scripts/: axon  axon-mcp  cache-guard.sh  check-container-revisions.sh  check_biome_staged.sh  check_claude_symlinks.sh  check_docker_context_size.sh  check_dockerignore_guards.sh  check_env_staged.sh  check_mcp_http_only.sh  check_no_mod_rs.sh  check_no_next_middleware.sh  check_pg_advisory_lock.sh  cortex  enforce_monoliths.py  enforce_monoliths_helpers.py  enforce_monoliths_impl.py  enforce_no_legacy_symbols.py  extract-base-urls.sh  generate_mcp_schema_doc.py  hook_deny_audit_sync.py  install-agent-skill.sh  install-git-hooks.sh  live-test-all-commands.sh  mcp_doc_renderer.py  mcp_schema_models.py  mcp_schema_parser.py  migrate_legacy_source_urls.py  qdrant-quality.py  rebuild-fresh.sh  searxng-research  test-ask-quality-regressions.sh  test-mcp-oauth-protection.sh  test-mcp-tools-mcporter.sh  test_qdrant_quality.py  time-query-gen  validate_skills_ref.sh  verify-legacy-files.sh  warn_new_unwraps.sh
skills/axon/: README.md  SKILL.md
tests/: cli_full_rewire_smoke.rs  cli_help_contract.rs  cli_system_rewire_regression.rs  crawl_jobs_v2_migration.rs  mcp_contract_parity.rs  mcp_option_mappers.rs  services_acp_event_mapping.rs  services_acp_lifecycle.rs  services_acp_smoke.rs  services_acp_spawn_env.rs  services_compile_services_smoke.rs  services_discovery_services.rs  services_lifecycle_services.rs  services_query_services.rs  services_system_services.rs  vector_v2_no_legacy_calls.rs  vector_v2_qdrant_migration.rs  vector_v2_ranking_migration.rs  web_ws_async_fire_and_forget.rs  web_ws_override_mapping.rs
(+692 files in other folders)
