[package]
name = "axon"
version = "0.1.0"
edition = "2021"

[lib]
path = "mod.rs"

[[bin]]
name = "axon"
path = "main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
console = "0.15"
dialoguer = "0.11"
indicatif = "0.17"
lapin = "2"
octocrab = "0.44"
redis = { version = "0.27", features = ["tokio-comp"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
# NOTE: In spider v2.45.x these are valid optional features and are required
# for our crawl/render pipeline.
spider = { version = "2", default-features = false, features = ["basic", "chrome", "regex", "webdriver"] }
spider_transformations = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
tokio = { version = "1", features = ["full"] }
tokio-executor-trait = "2"
tokio-reactor-trait = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
uuid = { version = "1", features = ["v4", "v5", "serde"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
criterion = "0.5"
regex = "1"

[[bench]]
name = "ask_query_retrieve"
harness = false
